# STing

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README  README.html  README.md  configure.ac  mkdocs.yml  sting.doxyfile
.github/ISSUE_TEMPLATE/: bug_report.md
data/: organism-typing_schemes.tsv
docs/: companion-scripts.md  detector.md  index.md  indexer.md  quickstart.md  typer.md
include/gzstream/: gzstream.h
scripts/: build_typer.sh  compute_fasta.sh  db_util.py  fetch_list  get_schemes_per_db.py  get_sting_command.py  monthly_cron.sh  normalize_db_names.py  plot_kmer_depth.R  update_dbs.py
share/pkgconfig/: seqan-2.pc
site/: 404.html  index.html  search.html  sitemap.xml
site/about/: index.html
site/companion-scripts/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/: Detector.cpp  Detector.h  Indexer.cpp  Indexer.h  IndexerOptions.cpp  IndexerOptions.h  KmerMatcher.cpp  KmerMatcher.h  KmerMatcherOptions.cpp  KmerMatcherOptions.h  Makefile.am  SequenceInfo.cpp  SequenceInfo.h  Timer.cpp  Timer.h  Typer.cpp  Typer.h  config.h  custom_utils.hpp  data_structures.hpp  dir_utils.hpp  types.hpp
