ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src

scriptsdir = $(bindir)

scripts_SCRIPTS = scripts/db_util.py \
	scripts/plot_kmer_depth.R

EXTRA_DIST = autogen.sh \
	include \
	README.md \
	README.html \
	scripts/db_util.py \
	scripts/plot_kmer_depth.R \
	m4/NOTES
	
# 	bin \
# all-local:
# 	mkdir -p bin
# clean-local:
# 	-rm -rf bin
